--- a/src/style/style.css
+++ b/src/style/style.css
@@ -21,6 +21,22 @@ body {
     justify-content: space-around;
 }
 
+.navbar-light {
+    background-color: rgba(0, 0, 0, 0.425);
+}
+
+.navbar .navbar-nav li a {
+    color: white !important;
+}
+
+.navbar .navbar-brand {
+    color: white !important;
+}
+
+.nav-item {
+    text-transform: uppercase ;
+}
+
 .navbar-brand {
     color: red;
 }
