--- a/src/style/style.css
+++ b/src/style/style.css
@@ -21,6 +21,7 @@ section {
 
 .navbar {
     background-color: rgba(0, 0, 0, 0.425);
+    backdrop-filter: blur(5px);
     color: white;
     justify-content: space-around;
 }
@@ -76,7 +77,8 @@ main {
 }
 
 .d-md-block {
-    background-color: rgba(0, 0, 0, 0.658);
+    background-color: rgba(0, 0, 0, 0.425);
+    backdrop-filter: blur(5px);
     border-radius: 5px;
 }
 
