--- a/style/style.css
+++ b/style/style.css
@@ -1,178 +1,287 @@
-/* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box; 
+  margin: 0px;
+  padding: 0px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-    background-color: #303030;
-    margin: 0px;
-    padding: 0px;
+  background-color: #303030;
+  margin: 0px;
+  padding: 0px;
+}
+
+main {
+  background-color: #303030;
 }
 
 section {
-    background-color: #303030;
+  background-color: #303030;
 }
 
-/* NavBar */
-
 .navbar {
-    background-color: rgba(0, 0, 0, 0.425);
-    backdrop-filter: blur(5px);
-    color: white;
-    justify-content: space-around;
+  background-color: rgba(0, 0, 0, 0.425);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  color: white;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .navbar-light {
-    background-color: rgba(0, 0, 0, 0.425);
+  background-color: rgba(0, 0, 0, 0.425);
 }
 
 .navbar .navbar-nav li a {
-    color: white !important;
+  color: white !important;
 }
 
 .navbar .navbar-brand {
-    color: white !important;
+  color: white !important;
+}
+
+.navbar .navbar-brand span {
+  color: red !important;
+  font-weight: bold;
 }
 
 .nav-item {
-    text-transform: uppercase ;
+  text-transform: uppercase;
 }
 
 .navbar-brand {
-    color: red;
+  color: red;
 }
 
 .navbar-collapse {
-    justify-content: center !important;
-    
+  -webkit-box-pack: center !important;
+      -ms-flex-pack: center !important;
+          justify-content: center !important;
+  color: red !important;
 }
 
-/* Main */
-
-main {
-    background-color: #303030;
+.nav-item {
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
-/* Carousel */
+.nav-item:hover {
+  background-color: red;
+  border-radius: 10px;
+}
 
 .carousel-indicators {
-    background-color: red;
+  background-color: red;
 }
 
 .carousel-item {
-    height: 80vh;
-    min-height: 300px;
-    background: no-repeat center center scroll;
-    -webkit-background-size: cover;
-    background-size: cover;
+  height: 80vh;
+  min-height: 300px;
+  background: no-repeat center center scroll;
+  background-size: cover;
 }
 
 .carousel-caption h5 {
-    color: red;
-    font-family: 'Bebas Neue';
-    font-size: 35px;
+  color: red;
+  font-family: 'Bebas Neue';
+  font-size: 35px;
 }
 
 .carousel-caption p {
-    padding-bottom: 70px;
+  padding-bottom: 70px;
 }
 
 .d-md-block {
-    background-color: rgba(0, 0, 0, 0.425);
-    backdrop-filter: blur(5px);
-    border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.425);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  border-radius: 5px;
 }
 
-/* Blog */
-
 .blog_container {
-    background-color: #303030;
-    max-width: 1000px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 20px;
-    justify-content: center;
-    margin: auto;
-    padding: 20px;
+  background-color: #303030;
+  max-width: 1000px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  padding: 20px;
 }
 
 .polaroid {
-    background-color: black;
-    padding: 15px 15px 40px;
-    color: white;
+  background-color: black;
+  padding: 15px 15px 40px;
+  color: white;
+  margin-bottom: 10px;
+  border-radius: 5px;
 }
 
 .polaroid h2 {
-    color: red;
-    font-size: 25px;
+  color: red;
+  font-size: 25px;
+  font-family: 'Bebas Neue', cursive;
+  padding-top: 5px;
 }
 
 .photo {
-    width: 100%;
-    height: 290px;
-    object-fit: cover;
+  width: 100%;
+  height: 290px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-<<<<<<< HEAD:style/style.css
 
 .blog_container {
-    background-color: #303030;
-    max-width: 1000px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 20px;
-    justify-content: center;
-    margin: auto;
-    padding: 20px;
+  background-color: #303030;
+  max-width: 1000px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  padding: 20px;
 }
 
-/* Conteudo.html */
-
 .main {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: auto 70vh 10vh;
-    grid-template-areas: "header header"
-                         "conteudo sidebar"
-                         "footer footer";
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 3fr 40vh;
+      grid-template-columns: 3fr 40vh;
+  -ms-grid-rows: auto auto 10vh;
+      grid-template-rows: auto auto 10vh;
+      grid-template-areas: "header header" "conteudo sidebar" "footer footer";
+}
+
+.main img {
+  max-width: 100%;
+  display: block;
 }
 
 .main header {
-    grid-area: header;
-    background-color: chocolate;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: header;
+  background-color: chocolate;
 }
 
 .main .conteudo {
-    grid-area: conteudo;
-    background-color: cyan;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: conteudo;
+  background-color: #303030;
+  text-align: justify;
+  padding: 60px 10px 20px 10px;
+}
+
+.main .conteudo h1 {
+  font-family: 'Bebas Neue', cursive;
+  font-size: 2.5em;
+  color: red;
+  margin: 0;
+}
+
+.main .conteudo h2 {
+  font-size: 1.3em;
+  color: silver;
+}
+
+.main .conteudo p {
+  color: white;
+  padding-top: 5vh;
+  font-family: 'Roboto';
+  font-size: 1em;
+  font-weight: 400;
+}
+
+.main .conteudo img {
+  background-color: red;
+  border-radius: 10px;
 }
 
 .main .side-bar {
-    grid-area: sidebar;
-    background-color: darkmagenta;
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: sidebar;
+  background-color: #303030;
+  padding: 60px 10px 0 0;
+}
+
+.main .sidebar .polaroid {
+  padding: 10px;
+  padding-top: 20px;
+}
+
+.main .sidebar .polaroid-card {
+  padding: 10px;
+  background-color: black;
+}
+
+.main .sidebar .polaroid-card h2 {
+  color: red;
+  font-size: 1.5em;
+  padding: 10px 0 10px 5px;
+}
+
+.main .sidebar .polaroid-card p {
+  color: white;
+  padding-left: 5px;
+}
+
+.polaroid-img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 290px;
+  border-radius: 10px;
 }
 
 .main footer {
-    grid-area: footer;
-    background-color: darkred;
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: footer;
+  background-color: darkred;
 }
 
-/* NavBar */
-
-.main nav a {
-    text-decoration: none;
+@media (max-width: 820px) {
+  .main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 10px 0 10px;
+  }
+  .main .side-bar {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    padding: 0 10px 0 10px;
+  }
 }
 
-
-.main nav {
-    list-style: none;
-    text-decoration: none;
-    height: 80px;
-    width: 100%;
-    background-color: royalblue;
+@media (max-width: 600px) {
+  .conteudo {
+    padding: 15px;
+  }
+  .main .side-bar {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
 }
-=======
->>>>>>> ad06522493c637ced9e5e768d65b190c0a3bf785:src/style/style.css
+/*# sourceMappingURL=style.css.map */
