--- a/style/style.scss
+++ b/style/style.scss
@@ -121,6 +121,15 @@ section {
     color: white;
     margin-bottom: 10px;
     border-radius: 5px;
+    overflow: hidden;
+}
+
+.polaroid-card {
+    overflow: hidden;
+}
+
+.polaroid-content {
+    overflow: hidden;
 }
 
 .polaroid h2 {
@@ -134,6 +143,14 @@ section {
     width: 100%;
     height: 290px;
     object-fit: cover;
+    transition: 0.5s;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.photo:hover {
+    transform: scale(1.5);
+    transition: 1.5s;
 }
 
 .blog_container {
@@ -237,6 +254,7 @@ section {
     object-fit: cover;
     height: 290px;
     border-radius: 10px;
+    transition: 0.5s;
 }
 
 .main footer {
