--- a/style/style.css
+++ b/style/style.css
@@ -72,12 +72,7 @@ section {
   border-radius: 10px;
 }
 
-.carousel-indicators {
-  background-color: red;
-}
-
 .carousel-item {
-  height: 80vh;
   background: no-repeat center center scroll;
   background-size: cover;
 }
@@ -97,6 +92,7 @@ section {
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   border-radius: 5px;
+  margin-bottom: 20%;
 }
 
 .blog_container {
@@ -138,6 +134,10 @@ section {
   padding-top: 5px;
 }
 
+.polaroid p {
+  font-family: "Roboto", sans-serif;
+}
+
 .photo {
   width: 100%;
   height: 290px;
@@ -147,6 +147,7 @@ section {
   transition: 0.5s;
   cursor: pointer;
   overflow: hidden;
+  margin-bottom: 10px;
 }
 
 .photo:hover {
@@ -174,11 +175,11 @@ section {
 .main {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 3fr 40vh;
-      grid-template-columns: 3fr 40vh;
+  -ms-grid-columns: 2fr 50vh;
+      grid-template-columns: 2fr 50vh;
   -ms-grid-rows: auto auto 10vh;
       grid-template-rows: auto auto 10vh;
-      grid-template-areas: "header header" "conteudo sidebar" "footer footer";
+      grid-template-areas: "header header" "conteudo sidebar" "footer footer";
 }
 
 .main img {
@@ -191,7 +192,6 @@ section {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: header;
-  background-color: chocolate;
 }
 
 .main .conteudo {
@@ -200,7 +200,7 @@ section {
   grid-area: conteudo;
   background-color: #303030;
   text-align: justify;
-  padding: 60px 10px 20px 10px;
+  padding: 60px 20vh 20px 20vh;
 }
 
 .main .conteudo h1 {
@@ -217,15 +217,30 @@ section {
 
 .main .conteudo p {
   color: white;
-  padding-top: 5vh;
   font-family: 'Roboto';
-  font-size: 1em;
-  font-weight: 400;
+  font-size: 1.1em;
+}
+
+.main .conteudo strong {
+  color: red;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
 }
 
 .main .conteudo img {
-  background-color: red;
+  background-color: black;
   border-radius: 10px;
+  margin-bottom: 15px;
+  width: 100%;
+}
+
+.main .conteudo #h2-relacionado {
+  text-align: center;
+  padding-top: 10px;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-size: 2em;
+  color: red;
 }
 
 .main .side-bar {
@@ -233,38 +248,7 @@ section {
   -ms-grid-column: 2;
   grid-area: sidebar;
   background-color: #303030;
-  padding: 60px 10px 0 0;
-}
-
-.main .sidebar .polaroid {
-  padding: 10px;
-  padding-top: 20px;
-}
-
-.main .sidebar .polaroid-card {
-  padding: 10px;
-  background-color: black;
-}
-
-.main .sidebar .polaroid-card h2 {
-  color: red;
-  font-size: 1.5em;
-  padding: 10px 0 10px 5px;
-}
-
-.main .sidebar .polaroid-card p {
-  color: white;
-  padding-left: 5px;
-}
-
-.polaroid-img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 290px;
-  border-radius: 10px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  padding: 60px 32px 0 0;
 }
 
 .main footer {
@@ -294,18 +278,43 @@ section {
     gap: 20px;
     padding: 0 10px 0 10px;
   }
+  .main .conteudo {
+    padding: 80px 10px 20px 10px;
+    font-size: 1.6em;
+  }
+  .main .conteudo h2 {
+    padding-bottom: 15px;
+  }
   .carousel-item {
     height: auto;
+  }
+  .navbar .navbar-brand {
+    color: white !important;
+    font-size: 2em;
   }
 }
 
 @media (max-width: 600px) {
-  .conteudo {
-    padding: 15px;
+  .navbar .navbar-brand {
+    font-size: 1.2em;
+    padding-left: 10px;
+  }
+  .main .conteudo {
+    font-size: 1em;
+  }
+  .main .conteudo p {
+    font-size: 20px;
   }
   .main .side-bar {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
+  }
+  .polaroid {
+    font-size: 1.5em;
+  }
+  .polaroid h2 {
+    font-size: 1.3em;
+    font-weight: bold;
   }
 }
 /*# sourceMappingURL=style.css.map */
