--- a/style/style.css
+++ b/style/style.css
@@ -299,8 +299,11 @@ section {
     font-size: 1.2em;
     padding-left: 10px;
   }
-  .main .conteudo {
-    font-size: 1em;
+  .main .conteudo h1 {
+    font-size: 30px;
+  }
+  .main .conteudo h2 {
+    font-size: 20px;
   }
   .main .conteudo p {
     font-size: 20px;
@@ -313,8 +316,11 @@ section {
     font-size: 1.5em;
   }
   .polaroid h2 {
-    font-size: 1.3em;
+    font-size: 25px;
     font-weight: bold;
+  }
+  .polaroid p {
+    font-size: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
