--- a/style/style.css
+++ b/style/style.css
@@ -179,7 +179,7 @@ section {
       grid-template-columns: 2fr 50vh;
   -ms-grid-rows: auto auto 10vh;
       grid-template-rows: auto auto 10vh;
-      grid-template-areas: "header header" "conteudo sidebar" "footer footer";
+      grid-template-areas: "header header" "conteudo sidebar" "footer footer";
 }
 
 .main img {
@@ -321,6 +321,179 @@ section {
   }
   .polaroid p {
     font-size: 20px;
+  }
+}
+
+.login-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 80px 60px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  background-color: #303030;
+  height: 100vh;
+}
+
+.article-content {
+  background-color: red;
+  border-radius: 5px 0 0 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 10vh;
+}
+
+.article-content img {
+  height: 40px;
+  margin-bottom: 9vh;
+}
+
+.article-content div {
+  padding-bottom: 45px;
+}
+
+.article-content h2 {
+  font-family: "Bebas Neue", sans-serif;
+}
+
+.article-content p {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  font-size: 16px;
+  text-align: center;
+}
+
+.article-content .btn-logar {
+  border: 2px solid black;
+  border-radius: 20px;
+  background-color: transparent;
+  padding-top: 5px;
+  margin: 0px 20px;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 1.2em;
+}
+
+.article-login {
+  background-color: white;
+  border-radius: 0 5px 5px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 10vh;
+}
+
+.article-login .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.article-login .social img {
+  width: 25px;
+  margin: 5px 10px 10px 5px;
+}
+
+.article-login h2 {
+  font-family: "Bebas Neue", sans-serif;
+  text-align: center;
+}
+
+.article-login p {
+  font-family: "Roboto", sans-serif;
+  color: #b5bbbd;
+}
+
+.article-login form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.article-login form > input {
+  margin-bottom: 10px;
+  border: none;
+  background-color: #b5bbbd;
+  border-radius: 5px;
+  padding: 2px;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+}
+
+.article-login form > input:hover {
+  background-color: #b5bbbda4;
+}
+
+.article-login button {
+  border: none;
+  border-radius: 20px;
+  background-color: red;
+  padding-top: 5px;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 1.2em;
+  border: 2px solid black;
+  margin: 0px 20px;
+}
+
+.article-login button:hover {
+  background-color: rgba(255, 0, 0, 0.685);
+}
+
+@media (max-width: 820px) {
+  .article-content {
+    width: 100vw;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 10px 10px 0 0;
+  }
+  .article-content .btn-logar {
+    width: 200px;
+  }
+  .article-content h2 {
+    text-align: center;
+  }
+  .article-login {
+    width: 100vw;
+    border-radius: 0 0 10px 10px;
+  }
+}
+
+@media (max-width: 600px) {
+  .login-container {
+    padding: 0px;
+  }
+  .article-content .btn-logar {
+    letter-spacing: 2px;
+  }
+  .article-login {
+    width: 100vw;
+  }
+  .article-login button {
+    letter-spacing: 2px;
   }
 }
 /*# sourceMappingURL=style.css.map */
