--- a/style/style.css
+++ b/style/style.css
@@ -290,7 +290,6 @@ section {
   }
   .navbar .navbar-brand {
     color: white !important;
-    font-size: 2em;
   }
 }
 
@@ -471,7 +470,11 @@ section {
   background-color: rgba(255, 0, 0, 0.685);
 }
 
-@media (max-width: 820px) {
+@media (max-width: 768px) {
+  .login-container {
+    height: 100%;
+    padding: 70px;
+  }
   .article-content {
     width: 100vw;
     -webkit-box-align: center;
@@ -491,7 +494,16 @@ section {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1024px) {
+  .article-content {
+    min-width: 80vw;
+  }
+  .article-login {
+    min-width: 80vw;
+  }
+}
+
+@media (max-width: 480px) {
   .login-container {
     padding: 0px;
   }
