--- a/style/style.scss
+++ b/style/style.scss
@@ -283,7 +283,6 @@ section {
 
     .navbar .navbar-brand {
         color: white !important;
-        font-size: 2em;
     }
 }
 
@@ -444,7 +443,13 @@ section {
     background-color: rgba(255, 0, 0, 0.685);
 }
 
-@media (max-width: 820px) {
+@media (max-width: 768px) {
+
+    .login-container {
+        height: 100%;
+        padding: 70px;  
+    }
+
     .article-content {
         width: 100vw;
         align-items: center;
@@ -466,8 +471,17 @@ section {
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1024px) {
+    .article-content {
+       min-width: 80vw;
+    }
 
+    .article-login {
+        min-width: 80vw;
+    }
+}
+
+@media (max-width: 480px) {
     .login-container {
         padding: 0px;
     }
