--- a/style/style.css
+++ b/style/style.css
@@ -40,6 +40,9 @@ section {
 
 .navbar .navbar-brand {
   color: white !important;
+  font-family: "Bebas Neue", sans-serif;
+  letter-spacing: 2px;
+  font-size: 1.3rem;
 }
 
 .navbar .navbar-brand span {
@@ -177,8 +180,8 @@ section {
   display: grid;
   -ms-grid-columns: 2fr 50vh;
       grid-template-columns: 2fr 50vh;
-  -ms-grid-rows: auto auto 10vh;
-      grid-template-rows: auto auto 10vh;
+  -ms-grid-rows: auto auto auto;
+      grid-template-rows: auto auto auto;
       grid-template-areas: "header header" "conteudo sidebar" "footer footer";
 }
 
@@ -252,11 +255,87 @@ section {
 }
 
 .main footer {
+  background-color: black;
+  height: auto;
+  width: 100vw;
+  font-family: "Roboto", sans-serif;
+  padding-top: 40px;
+  color: white;
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: footer;
-  background-color: darkred;
+}
+
+.main .footer-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.main .footer-content h3 {
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 3rem;
+  font-family: "Bebas Neue", sans-serif;
+  letter-spacing: 2px;
+}
+
+.main footer span {
+  color: red;
+}
+
+.main .footer-content p {
+  max-width: 500px;
+  margin: 10px auto;
+  line-height: 28px;
+  font-size: 14px;
+}
+
+.main .footer-social {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 1rem 0 3rem 0;
+}
+
+.main .footer-social li {
+  margin: 0 10px;
+}
+
+.main .footer-social a {
+  text-align: none;
+}
+
+.main .footer-copy {
+  width: 100vw;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.main .footer-copy p {
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
 }
 
 @media (max-width: 820px) {
@@ -551,5 +630,85 @@ input:invalid {
     -webkit-transform: translateX(4px);
             transform: translateX(4px);
   }
+}
+
+footer {
+  background-color: black;
+  height: auto;
+  width: 100vw;
+  font-family: "Roboto", sans-serif;
+  padding-top: 40px;
+  color: white;
+}
+
+.footer-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.footer-content h3 {
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 3rem;
+  font-family: "Bebas Neue", sans-serif;
+  letter-spacing: 2px;
+}
+
+footer span {
+  color: red;
+}
+
+.footer-content p {
+  max-width: 500px;
+  margin: 10px auto;
+  line-height: 28px;
+  font-size: 14px;
+}
+
+.footer-social {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 1rem 0 3rem 0;
+}
+
+.footer-social li {
+  margin: 0 10px;
+}
+
+.footer-social a {
+  text-align: none;
+}
+
+.footer-copy {
+  width: 100vw;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.footer-copy p {
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
 }
 /*# sourceMappingURL=style.css.map */
