--- a/style/style.css
+++ b/style/style.css
@@ -182,7 +182,7 @@ section {
       grid-template-columns: 2fr 50vh;
   -ms-grid-rows: auto auto auto;
       grid-template-rows: auto auto auto;
-      grid-template-areas: "header header" "conteudo sidebar" "footer footer";
+      grid-template-areas: "header header" "conteudo conteudo" "footer footer";
 }
 
 .main img {
@@ -200,6 +200,7 @@ section {
 .main .conteudo {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: conteudo;
   background-color: #303030;
   text-align: justify;
@@ -246,12 +247,8 @@ section {
   color: red;
 }
 
-.main .side-bar {
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
-  grid-area: sidebar;
-  background-color: #303030;
-  padding: 60px 32px 0 0;
+.main .conteudo .blog_container h1 {
+  color: red !important;
 }
 
 .main footer {
